maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:17: error: illegal start of simple expression
  }
  ^RandomMouseMaze:18: error: 'while' expected but '}' found.
}
^