maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  var fin=false
  do{
    fin=false
    random3()
  if(random3==0){
    avance()
  }
  else if(random3==1){
    droite()
  }
  else if(random3==2){
    gauche()
  }
  while(fin==true)
  }
}
